Fixes for warnings
Change-Id: Ide0e57b0a6bafd705c302a3624fad27313a02e40